# portcast-assignment

./: .gitignore  README.org  api.py  config.py  consumer.py  flake.nix  producer.py  pyproject.toml
database/: __init__.py  models.py
db/: __init__.py  models.py
docker/: docker-compose.yml
docker/api/: Dockerfile
docker/consumer/: Dockerfile
docker/producer/: Dockerfile
docker/redis/: redis.conf
redis_/: client.py  queue_.py  task.py
scrapy_/: scrapy.cfg
scrapy_/scrapy_/: settings.py
scrapy_/scrapy_/spiders/: shipments_spider.py
spiders/: __init__.py  shipments_spider.py
