[tool.poetry]
name = "portcast-assignment"
version = "0.1.0"
description = ""
authors = ["Yevhen Shymotiuk <yevhenshymotiuk@pm.me>"]

[tool.poetry.dependencies]
python = "^3.6.1,<3.7.0"
prefect = "^0.15.11"
Scrapy = "^2.5.1"
redis = "^4.0.2"
sqlmodel = "^0.0.5"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]
mypy = "^0.930"
pylint = "^2.12.0"
ipython = "^7.16.2"
types-redis = "^4.0.5"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
